Editing around. Text added to several figures. One additional figure included.

--- a/document.tex
+++ b/document.tex
@@ -25,13 +25,19 @@ Journal of Eye Movement Research\\
 \journal{}
 \volume{}
 
-\abstract{
-Head-mounted gaze trackers can be used for gaze estimation purposes in mobile scenarios. A wireless gaze tracker in the form of gaze tracking glasses permits the continuous monitoring of a subject's point of regard on the surrounding 3D environment. In this work, we combine gaze tracking and hand gesture recognition to allow a subject to interact with objects in the environment by gazing at them (pointing), and controlling the object using hand gesture commands. A set of gaze tracking glasses is made from low-cost hardware which consists of glasses' frame, eye tracking camera and the scene camera. An open source gaze estimation software is used for eye tracking and obtaining the user's gaze data. A binary beacon recognition library is used to identify objects in the environment. A hand gesture classification algorithm is used to recognize hand-based control commands. When combining all these elements, the emerging system permits a subject to move freely in an environment, select the object he wants to interact with by gaze, and transmit a control command to it by performing a hand gesture. 
-%specific object is identified by the binary beacon visible in its surface. 
- This innovative HCI paradigm opens up new forms of interaction with objects in an smart environment.
-\linebreak
-\linebreak
-{\bf Keywords: Keywords: Gaze Tracking, Head-Mounted Gaze Tracker, Mobile Interaction, Gaze Interaction, HCI}}
+\abstract{ Head-mounted gaze trackers can be used for gaze estimation purposes in mobile scenarios. A wireless gaze
+tracker in the form of gaze tracking glasses permits the continuous monitoring of a subject's point of regard on the
+surrounding 3D environment. In this work, we combine gaze tracking and hand gesture recognition to allow a subject to
+interact with objects in the environment by gazing at them, and controlling the object using hand gesture commands. A
+set of gaze tracking glasses is made from low-cost hardware which consists of glasses' frame, eye tracking camera and
+the scene camera. An open source gaze estimation software is used for eye tracking and user's gaze estimation. A binary
+beacon recognition library is used to identify objects in the environment through the scene camera. A hand gesture
+classification algorithm is used to recognize hand-based control commands. When combining all these elements, the
+emerging system permits a subject to move freely in an environment, select the object he wants to interact with by gaze,
+pointing part, and transmit a control command to it by performing a hand gesture. This innovative HCI paradigm opens up
+new forms of interaction with objects in a smart environment.
+\linebreak \linebreak {\bf Keywords: Keywords: Gaze Tracking, Head-Mounted Gaze Tracker, Mobile Interaction, Gaze
+Interaction, HCI}}
 
 \acknowledgements{}
 \shorttitle{Interacting with Objects in the Environment by Gaze and Hand Gestures}
@@ -54,23 +60,65 @@ Short Title
 \thispagestyle{plain}
 
 \section{Introduction} 
-% We should clearify that this paper does not contribute in the hand gesture recognition but it uses the gesture and gaze in a mobile situation for controlling a robot.
-Body language and gaze are important forms of communication among humans. In this work we present a system that combines gaze pointing and hand gestures to interact with objects in the environment. Our system merges a video-based gaze tracker, a hand gesture classifier and a visual marker recognition module into an innovate HCI device that permits novel forms of interaction with electronic devices in the environment. Gaze is used as a pointing mechanism to select the object with which the subject wants to interact. A visual binary marker attached to the object is used for identification of the object by the system. Finally, a hand gesture is mapped to a specific control command that makes the object carry out a particular function.
+% We should clearify that this paper does not contribute in the hand gesture recognition but it uses the gesture and
+% gaze in a mobile situation for controlling a robot.
+Body language and gaze are important forms of communication among humans. In this work, we present a system that
+combines gaze pointing and hand gestures to interact with objects in the environment. Our system merges a video-based gaze
+tracker, a hand gesture classifier and a visual marker recognition module into an innovate HCI device that permits novel
+forms of interaction with electronic devices in the environment. Gaze is used as a pointing mechanism to select the
+object with which the subject wants to interact. A visual binary marker attached to the object is used for
+identification of the object by the system. Finally, a hand gesture is mapped to a specific control command that makes
+the object being gazed at to carry out a particular function.
 
-Using gaze for interaction with computers was initiated in the early 1980â€™s [Bolt, 1982] and further developed by [Ware 1987]. Today, gaze interaction is mostly done using a remote eye tracker with a single user sitting in front of a computer display. However, the head-mounted gaze trackers (HMGT) allow for a higher degree of mobility and flexibility, where the eye tracker is mounted on the user and thus allows gaze to be estimated when e.g. walking and driving. HMGT systems are commonly used for estimating the gaze point of the user in his field of view. However, the point of regard (PoR) obtained by head-mounted gaze trackers can be used for interaction with many different types of objects present in our daily activities in 3D environments. There have been some work done on using gaze for interaction with computers in the mobile scenarios using head-mounted gaze trackers [Mardanbegi]. Despite the fact that gaze can be used as a mechanism for pointing in many interactive applications, eye information has been shown to be limited for inter- action. Point of regard can be used for pointing, but not for yielding any additional commands. The main reason is that it is unnatural to overload a perceptual channel such as vision with a motor control task [Zhai, Morimoto, Ihde 1999]. Therefore, other interaction modalities such as body gestures and speech together with gaze can be used for enhancing the gaze-based interaction with computer and also with the environment. 
-%the last sentence above should be corrected
- In this paper, we use the hand gestures for enhancing the gaze interaction in a fully mobile scenario . 
+Using gaze for interaction with computers was initiated in the early 1980 [Bolt, 1982] and further developed by [Ware
+1987]. Today, gaze interaction is mostly done using a remote eye tracker with a single user sitting in front of a
+computer display. However, the head-mounted gaze trackers (HMGT) allow for a higher degree of mobility and flexibility,
+where the eye tracker is mounted on the user and thus allows gaze to be estimated when e.g. walking and driving. HMGT
+systems are commonly used for estimating the gaze point of the user in his field of view. However, the point of regard
+(PoR) obtained by head-mounted gaze trackers can be used for interaction with many different types of objects present in
+our daily activities in 3D environments. There have been some work done on using gaze for interaction with computers in
+mobile scenarios using head-mounted gaze trackers [Mardanbegi]. Despite the fact that gaze can be used as a mechanism
+for pointing in many interactive applications, eye information has been shown to be limited for inter-action purposes.
+The PoR can be used for pointing, but not for yielding any additional commands. The main reason is that it is unnatural
+to overload a perceptual channel such as vision with a motor control task [Zhai, Morimoto, Ihde 1999].
+Therefore, other interaction modalities such as body gestures and speech together with gaze can be used for enhancing
+the gaze-based interaction with computers and also with electronic objects in the environment.  In this paper, we use
+hand gestures to circumvent the limitations of gaze to convey control commands. The combination of gaze and hand
+gestures enhances the interaction possibilities in a fully mobile scenario.
  
- Automatic gesture recognition is a topic in computer science and language technology that strives to interpret human gestures via computational algorithms. Gestures can originate from any bodily motion or state but commonly originate from the face or hands. An appealing feature of gestural interfaces is that they make it possible for users to communicate with objects without the need for external control devices. Hand gestures are an obvious choice as a mechanism to interact with objects in the environment \cite{Rozado2012b,myicann2010}. Automated hand gesture recognition is challenging since in order for such an approach to represent a serious alternative to conventional input devices, applications based on computer vision should be able to work successfully under uncontrolled light conditions, backgrounds and perspectives. In addition, deformable and articulated objects like hands represent added difficulty both for segmentation and shape recognition purposes. This paper dose not contribute in the hand gesture recognition, but suggests the combination of gaze and hand gestures as an alternative to the conventional methods that are used for gaze interaction such as: blinking (e.g., [MacKenzie 2008]), dwelling (e.g., [Jacob 1990]), and gaze gesture (e.g., [isokosi 2000]). We use the scene image of the HMGT system for recognizing the hand gestures and for recognizing the visual markers attached to the gazed objects. The hand gesture recognition module we developed here is able to detect a hand in front of the scene camera of the HMGT and the number of fingers that the hand is holding up. 
+ Automatic gesture recognition is a topic in computer science and language technology that strives to interpret human
+ gestures via computational algorithms. Gestures can originate from any bodily motion or state but commonly originate
+ from the face or hands. An appealing feature of gestural interfaces is that they make it possible for users to
+ communicate with objects without the need for external control devices. Hand gestures are an obvious choice as a
+ mechanism to interact with objects in the environment \cite{Rozado2012b,myicann2010}. Automated hand gesture
+ recognition is challenging since in order for such an approach to represent a serious alternative to conventional input
+ devices, applications based on computer vision should be able to work successfully under uncontrolled light conditions,
+ backgrounds and perspectives. In addition, deformable and articulated objects like hands represent added difficulty
+ both for segmentation and shape recognition purposes. This paper dose not contribute in the hand gesture recognition,
+ but suggests the combination of gaze and hand gestures as an alternative to the conventional methods that are used for
+ gaze interaction such as: blinking (e.g., [MacKenzie 2008]), dwelling (e.g., [Jacob 1990]), and gaze gesture (e.g.,
+ [isokosi 2000]). We use the scene image of the HMGT system for recognizing the hand gestures and for recognizing the
+ visual markers attached to the gazed objects. The hand gesture recognition module we developed here is able to detect a
+ hand in front of the scene camera of the HMGT and the number of fingers that the hand is holding up.
  
- In Summary, this work represents a proof of concept for an innovative form of interacting with objects in the environment by combining gaze and hand gestures. Interaction is achieved by gazing at an object in the environment and carrying out a hand gesture. The hand gesture specifies a certain command and gazing at the object, and the visual marker associated to it, make only that specific object to respond to the subsequent hand gesture. The off-the-shelf components used to build the hardware, the low cost of building the entire system and the open source nature of the algorithms used, make this form of interaction amenable for spreading among academic institutions and research labs to further investigate and stretch the possibilities of this innovative HCI paradigm.
+ In Summary, this work represents a proof of concept for an innovative form of interacting with objects in the
+ environment by combining gaze and hand gestures. Interaction is achieved by gazing at an object in the environment and
+ carrying out a hand gesture. The hand gesture specifies a certain command and gazing at the object, and the visual
+ marker associated to it, make only that specific object to respond to the subsequent hand gesture. The off-the-shelf
+ components used to build the hardware, the low cost of building the entire system and the open source nature of the
+ algorithms used, make this form of interaction amenable for spreading among academic institutions and research labs to
+ further investigate and stretch the possibilities of this innovative HCI paradigm.
 
 The remaining paper is structured as follows. First...XXXX
 
 
-% Diako: <the following paragraph about the eye tracking should be removed>
-%Eye tracking refers to the monitoring of eye movements. Gaze tracking is the process of measuring the point of regard (where a person is looking). A head mounted eye tracker is a device that permits measuring eye movement while the subject is moving around an environment and estimate the position of gaze in the environment. Eye trackers are used in research on the visual system, in psychology, in cognitive linguistics, product design and in Human Computer Interaction
-%(HCI) research \cite{myiwann2011}. There are a number of methods for measuring eye movement. The most popular variant uses video images from which the eye position is extracted. Other methods use search coils or are based on electrooculography.
+% Diako: <the following paragraph about the eye tracking should be removed> Eye tracking refers to the monitoring of eye
+% movements. Gaze tracking is the process of measuring the point of regard (where a person is looking). A head mounted
+% eye tracker is a device that permits measuring eye movement while the subject is moving around an environment and
+% estimate the position of gaze in the environment. Eye trackers are used in research on the visual system, in
+% psychology, in cognitive linguistics, product design and in Human Computer Interaction (HCI) research
+% \cite{myiwann2011}. There are a number of methods for measuring eye movement. The most popular variant uses video
+% images from which the eye position is extracted. Other methods use search coils or are based on electrooculography.
 
 
 
@@ -79,10 +127,16 @@ The remaining paper is structured as follows. First...XXXX
 %Diako! My subsections are only a suggestion. you know better than me how to properly organize this section :)
 %Related work on mobile gaze-based interaction, and hand gesture interaction with robot
 
-Mardanbegi et. al [] presented a method for measuring the head gestures by the eye trackers. They applied their method for controlling the objects in the environment by gazing at objects and performing a head gesture. In their implementation for the head-mounted eye trackers they used the scene image for recognizing the objects and also to ensure that the PoR is on the object during the gesture. In contrast, in this paper, we have used the hand gestures and gaze as a multimodal choice for interaction. In this paper, we have used the information provided by the cameras of the head-mounted eye tracker for measuring the hand gestures. 
+Mardanbegi et. al [] presented a method for measuring the head gestures by the eye trackers. They applied their method
+for controlling the objects in the environment by gazing at objects and performing a head gesture. In their
+implementation for the head-mounted eye trackers they used the scene image for recognizing the objects and also to
+ensure that the PoR is on the object during the gesture. In contrast, in this paper, we have used the hand gestures and
+gaze as a multimodal choice for interaction. In this paper, we have used the information provided by the cameras of the
+head-mounted eye tracker for measuring the hand gestures.
 
 
-%There has been substantial research in hand/body gesture in for human-computer interaction. Lenman et al. explored the use of pie- and marking menus in hand gesture-based interaction[12].
+% There has been substantial research in hand/body gesture in for human-computer interaction. Lenman et al. explored the
+% use of pie- and marking menus in hand gesture-based interaction[12].
 
 
 
@@ -138,7 +192,7 @@ mounted on a helmet or a pair of safety glasses \cite{lowcostitugazetracker}.
 Head-mounted eye trackers can be used for mobile interaction as well as gaze estimation purposes.
 In this work, we have build a low-cost headmounted eye tracker using off-the-shelf components.  The system consists of
 safety glasses, batteries, wireless eye camera and the wireless scene or field of view camera. The wireless eye camera
-is equpped with infrared emitting diodes that permit the associated software to monitor the position of the pupil on the
+is equipped with infrared emitting diodes that permit the associated software to monitor the position of the pupil on the
 image and the infrared reflection in the iris. The vector difference between the pupil center and the glint reflection
 in the iris can be tracked during a calibration procedure to build a user specific model of his gaze. The calibration
 procedure consists on the user looking at a number of points on the environment and marking them on the scene camera
@@ -156,7 +210,11 @@ Figure \ref{gazeTrackingGlasses}
 
 \begin{figure}[tp]
  \fitbitmap{figures/gazeTrackingGlasses.jpg}
- \caption{\textbf{Low Cost Gaze Tracking Glasses.} Bla bla.}
+ \caption{\textbf{Low Cost Gaze Tracking Glasses.} The wireless camera on the top left of the figure is what we
+ referred to in this work as the scene camera. The scene camera approximately captures the field of view of the user.
+ The Haytham software superimposes the gaze estimation coordinates over the  video stream generated by the scene
+ camera. The camera on the bottom left of the figure is the gaze tracking camera that monitors the user's gaze. The
+ top right of the figure shows the battery that is used to provide energy to the cameras.}
  % the label is used to put refrences to this figure in the text
  \label{gazeTrackingGlasses}
 \end{figure}
@@ -166,7 +224,8 @@ Figure \ref{jeremy}
 
 \begin{figure}[tp]
  \fitbitmap{figures/jeremy.jpg}
- \caption{\textbf{Low Cost Gaze Tracking Glasses On a Subject.} Bla bla.}
+ \caption{\textbf{Low Cost Gaze Tracking Glasses On a Subject.} This figure shows how the low-cost headmounted gaze
+ tracking system looks while being used by a subject.}
  % the label is used to put refrences to this figure in the text
  \label{gazeTrackingGlasses}
 \end{figure}
@@ -174,8 +233,6 @@ Figure \ref{jeremy}
 
 \subsection{Apparatus}
 \subsubsection{Eye-tracking system}
-\section{Results}
-
 
 Materials:
 Plastic safety glasses
@@ -246,7 +303,11 @@ This is a test Figure \ref{visualMarker}
 
 \begin{figure}[tp]
  \fitbitmap{figures/visualMarker.jpg}
- \caption{\textbf{Visual Marker Recognition.} Bla bla bla.}
+ \caption{\textbf{Visual Marker Recognition.} The XXX library was used to recognize visual markers in the
+ environment as captured by the scene camera. The crosshair in the Figure represents the gaze estimation provided by
+ the Haytham software. When a subject position  its gaze  on a visual marker that identifies an object, the system
+ interprets this as a pointing action and sends the subsequent recognized hand gestures to the
+ specific object represented by the visual marker.}
  % the label is used to put refrences to this figure in the text
  \label{visualMarker}
 \end{figure}
@@ -258,7 +319,8 @@ Figure \ref{hand}
 
 \begin{figure}[tp]
  \fitbitmap{figures/hand.jpg}
- \caption{\textbf{Hand Pose Recognition Through Scene Camera.} Bla bla.}
+ \caption{\textbf{Hand Pose Recognition Through Scene Camera.} The figure shows a hand with five fingers being holded 
+ up as recognize through the scene camera by the hand pose recognition routine.}
  % the label is used to put refrences to this figure in the text
  \label{hand}
 \end{figure}
@@ -268,30 +330,41 @@ Figure \ref{systemDiagram}
 
 \begin{figure}[tp]
  \fitbitmap{figures/systemDiagram.jpg}
- \caption{\textbf{System Diagram.} Bla bla.}
+ \caption{\textbf{System Diagram.} .}
  % the label is used to put refrences to this figure in the text
  \label{systemDiagram}
 \end{figure}
 
 
+\begin{figure}[tp]
+ \fitbitmap{figures/systemAtWork.jpg}
+ \caption{\textbf{System At Work.} This Figure shows a user gazing at the visual marker identifying the robot and
+ performing a hand gesture to transmit control command to the robot.}
+ % the label is used to put refrences to this figure in the text
+ \label{systemAtWork}
+\end{figure}
+
 \section{Application}
 % Diako, I was wondering if we can really refer to our trials with the system as a ``pilot study''. What do you think?
 We carried out a small pilot study to test the functionality and performance of the system. We decided to test the
 system in a environment where 3 ``smart'' objects could be controlled by the system simultaneously: a computer, a set of
-leds in a bread board and a robot. The hand gesture recognition module could recognize 5 different states of the hands
+leds in a breadboard and a robot. The hand gesture recognition module could recognize 5 different states of the hands
 as defined by the number of fingers being held up: 1, 2, 3, 4 and 5. A gesture was defined as one of these 5 states plus
 one of four spatial directions: up, down, left and right.
 
-The infrared leds could just be turned on and off. Two fingers being held up and an upward movement would turn on the
-leds. Four fingers being hold up and a movement to the right would turn them off.
+The breadboard responded to users commands just by turning the infrared leds on and off. Two fingers being held up and
+an upward movement would turn on the leds. Four fingers being hold up and a movement to the right would turn them off.
 
-The same hand gestures were used to control the computer. The gestures were mapped to minimizing the current window on
-display in the computer GUI and to bring them back up. This was done just as a proof of concept, any other type of
-gestures associated to different control commands could be envisioned and implemented.
+The same hand gestures were used to control the computer. The upward movement of the hand with two fingers being held up
+was mapped to a command in the operating system that minimizes all the current open window on display in the computer
+GUI. Four fingers being hold up and a movement to the right gesture was mapped to a command that brings all the
+minimized windows back up. This particular set of gestures and control commands were not selected specifically for
+any particular reason other than as a proof of concept. Any other type of gestures associated to different
+control commands could be envisioned and implemented.
 
-The robotic control was the most elaborated one. The robot could be made to move forward, backward, right and left. The
-numbers of fingers being held up indicated, either the speed for forward and backward movements or the amount of turn to
-be made for right and left movements.
+The robotic control example was the most elaborated one. The robot could be made to move forward, backward, right and
+left. The numbers of fingers being held up with the hand indicated, either the speed for forward and backward movements
+or the amount of turn to be made for right and left movements.
 
 The hand gestures could be done with bare hands, but we notice that in environments where the color of the walls could
 resemble the skin hue, hand gesture recognition performance would suffer. Using a glove with a distinctive color, not 
@@ -306,14 +379,14 @@ with a set of light emitting diodes and with a robot.
 \section{Discussion and Conclusion}
 In this work we have shown how to interact with objects in the environment through an innovative combination of gaze and
 hand gestures using a set of gaze tracking glasses and a hand gesture recognition module. The method is easily
-extensible to multiple objects in the environment and a wide array of hand gestures.
+extensible to multiple objects in the environment and to a wide array of hand gestures.
 
 The low-cost headmounted eye tracker used and the gaze estimation algorithms employed do not compensate for parallax
 error, i.e. the inability to differentiate between the working plane and the calibration plane
 \cite{mardanbegi2012parallax}. This limits the ability to alternating interaction with objects at a distance and objects
 up close. Nonetheless, since the scene camera used in the glasses is relatively close to the eye being tracked, see Figure
 \ref{gazeTrackingGlasses}, the parallax error was minimized. Furthermore, we notice that during the calibration, using
-calibration points situated at different distances (from 1 to 10 meters) would find a compromise between objects
+calibration points situated at different distances (from 1 to 10 meters) would achieve a compromise between objects
 far away and objects up close and would generate good gaze estimation for all sort of distances. We noticed that
 gaze estimation accuracy was never an issue for our system. Only over time, if the glasses would move slightly from
 their position during calibration, due to sweat on the skin and the glasses sliding slightly, would gaze
@@ -344,32 +417,14 @@ gestures, and physiologically it is tiring and challenging to complete them. Fin
 and complex hand gestures is therefore paramount to successfully use hand gestures as a control input device.
 
 
-
-%How to insert a figure (image):
-\begin{figure}[tp]
- %there's a figure in the same directory called "graph1.jpg"
- \fitbitmap{figures/screenGazeTracker.jpg}
- \caption{caption...}
- % the label is used to put refrences to this figure in the text
- \label{fig:fig1}
-\end{figure}
+The preliminary results obtained  in this pilot work shows promise for this form of interaction with objects in the
+environment. The combination of gaze and hand gestures to select an object  and emit a control command are both natural 
+to potential users and fast to carry out. The richness of hand gestures potentially available suggests that this form of
+interaction can be used for sophisticated environments requiring  a large set of control commands.
+Further studies will try to quantify precisely the robustness of the method as well as its performance in comparison to
+other forms of interaction  with objects in the environment.
 
 
-%\begin{table}[tbp]
-% \caption{Some numbers that could be experimental data.}
-% \label{tab:tab1}
-% \begin{tabular}{lcc}\hline
-%           & \multicolumn{2}{c}{Factor 2} \\ \cline{2-3}
-% Factor 1  & Condition A  & Condition B   \\ \hline
-% First     & 586 (231)    & 649 (255)     \\
-%           &    2.2       &    7.5        \\
-% Second    & 590 (195)    & 623 (231)     \\
-%           &    2.8       &    2.5        \\ \hline
-% \end{tabular}
-%\end{table}
-
-
-\section{Discussion}
 %assumes that there is a biblio.bib file in the same directory
 \bibliography{biblio,library}
 \end{document}
